[package]
name = "prowl"
version = "0.1.0"
edition = "2024"
description = "A modern CLI for the Prowl push notification API"
license = "MIT"
repository = "https://github.com/example/prowl-cli"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"
thiserror = "2"
color-eyre = "0.6"
colored = "2"
indicatif = "0.17"
directories = "5"
clap_complete = "4.5"
