[package]
name = "prowl"
version = "0.1.0"
edition = "2024"
description = "A modern CLI for the Prowl push notification API"
license = "MIT"
repository = "https://github.com/example/prowl-cli"

[dependencies]
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
toml = "1"
thiserror = "2"
color-eyre = "0.6"
colored = "3"
indicatif = "0.18"
directories = "6"
clap_complete = "4.6"
